discussion/kv_engine/159412/159412_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47687: Prevent dropping of prepares which can be undone by Magma rollback

Magma creates checkpoints every few minutes which are used for
rollback. Since magma does background compaction it is possible
for compaction to drop deletes between the checkpoints. If
kv_engine requests a rollback to one of these checkpoints, the
sequence scan does not see the compacted prepare keys resulting
in the rollback callback not being called for these keys.
This patch ensures we dont drop prepares that can be rolled back
by magma.

Change-Id: If6c3faa48e500506ca36f5282ced6f892018537d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Apaar gupta
Date: 2021-09-01 17:24:12.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-01 17:40:20.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39317/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(259): error C2039: "GetMinRollbackUserStats": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39317/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11893/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:259:33: error: no member named "GetMinRollbackUserStats" in "magma::Magma" [clang-diagnostic-error]
        auto userStats = magma->GetMinRollbackUserStats(vbid.get());
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11893/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:259:33:
error: no member named "GetMinRollbackUserStats" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11893/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33479/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:259:33:
error: no member named "GetMinRollbackUserStats" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33479/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1555/ : FAILURE

Compile error at [2021-09-01T17:32:23.264Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:259:33:
error: ?class magma::Magma? has no member named ?GetMinRollbackUserStats?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1555/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1538/ : FAILURE

Compile error at [2021-09-01T17:28:39.862Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:259:33:
error: no member named "GetMinRollbackUserStats" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1538/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14169/ : FAILURE

Compile error at [2021-09-01T17:36:16.016Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:259:33:
error: no member named "GetMinRollbackUserStats" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14169/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13741/ : FAILURE

Compile error at [2021-09-01T17:38:09.079Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:259:33:
error: ?class magma::Magma? has no member named ?GetMinRollbackUserStats?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13741/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12652/ : FAILURE

Compile error at [2021-09-01T17:26:45.333Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:259:33:
error: no member named "GetMinRollbackUserStats" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12652/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21679/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10677/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13506/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
